# fsedit-qt5

./: CMakeLists.txt  README.md  license.txt
cmake/: fstest.cmake  setup_exe_target.cmake  tr_sources.cmake
source/application/: #CMakeLists.txt#  CMakeLists.txt  main.cpp
source/libfstest/: CMakeLists.txt  fstest.cpp  fstest.h
source/libmodel/: CMakeLists.txt  document.cpp  document.h  documentmanager.cpp  documentmanager.h  fsconnect.h
source/libmodel/unittest/: documentmanagertest.cpp  documentmanagertest.h  documenttest.cpp  documenttest.h
source/libmodelcommands/: CMakeLists.txt  editcommands.cpp  editcommands.h  editorinterface.h
source/libui/: CMakeLists.txt  closedialog.cpp  closedialog.h  closedialog.ui  editwidget.cpp  editwidget.h  helpdialog.ui  libui.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  translation.cpp  translation.h
translations/: CMakeLists.txt  fseditor_da.ts  fseditor_en.ts
